@@ -1,10 +1,10 @@
 
      _________________________________________________________________
-   
+
   Copyright and Licensing Information for ACE(TM), TAO(TM), CIAO(TM),
   DAnCE(TM), and CoSMIC(TM)
-  
-   [1]ACE(TM), [2]TAO(TM), [3]CIAO(TM), DAnCE>(TM), and [4]CoSMIC(TM)
+
+   [1]ACE(TM), [2]TAO(TM), [3]CIAO(TM), DAnCE(TM), and [4]CoSMIC(TM)
    (henceforth referred to as "DOC software") are copyrighted by
    [5]Douglas C. Schmidt and his [6]research group at [7]Washington
    University, [8]University of California, Irvine, and [9]Vanderbilt
@@ -17,7 +17,7 @@
    built using DOC software that you release. No copyright statement
    needs to be provided if you just ship binary executables of your
    software products.
-   
+
    You can use DOC software in commercial and/or binary software releases
    and are under no obligation to redistribute any of your source code
    that is built using DOC software. Note, however, that you may not
@@ -28,7 +28,7 @@
    using DOC software in your software, though we encourage you to let
    [10]us know so we can promote your project in the [11]DOC software
    success stories.
-   
+
    The [12]ACE, [13]TAO, [14]CIAO, [15]DAnCE, and [16]CoSMIC web sites
    are maintained by the [17]DOC Group at the [18]Institute for Software
    Integrated Systems (ISIS) and the [19]Center for Distributed Object
@@ -51,7 +51,7 @@
    University, UC Irvine, or Vanderbilt University, their employees, or
    students be liable for any lost revenue or profits or other special,
    indirect and consequential damages.
-   
+
    DOC software is provided with no support and without any obligation on
    the part of Washington University, UC Irvine, Vanderbilt University,
    their employees, or students to assist in its use, correction,
@@ -65,7 +65,7 @@
    obtains time/date and calendaring information from operating systems
    users will not be affected by the new DST rules as long as they
    upgrade their operating systems accordingly.
-   
+
    The names ACE(TM), TAO(TM), CIAO(TM), DAnCE(TM), CoSMIC(TM),
    Washington University, UC Irvine, and Vanderbilt University, may not
    be used to endorse or promote products or services derived from this
@@ -75,13 +75,13 @@
    TAO(TM), CIAO(TM), DAnCE(TM), or CoSMIC(TM), nor does it grant
    permission for the name Washington University, UC Irvine, or
    Vanderbilt University to appear in their names.
-   
+
    If you have any suggestions, additions, comments, or questions, please
    let [21]me know.
-   
+
    [22]Douglas C. Schmidt
      _________________________________________________________________
-   
+
    Back to the [23]ACE home page.
 
 References
